aboutUs our story text not centered vertically fix

--- a/client/src/style/pages/AboutPage.scss
+++ b/client/src/style/pages/AboutPage.scss
@@ -36,6 +36,10 @@ $font-size: 3.2rem;
                 object-fit: cover;
             }
         }
+        .right {
+            @include flex;
+            flex-direction: column;
+        }
     }
 }
 
